# huaweicloud-sdk-python

./: Help on License  LICENSE  Notice.md  PKG-INFO  README.md  README.rst  requirements.txt  setup.cfg  test-requirements.txt
doc/source/: conf.py  enforcer.py
docs/: index.html
docs/zh-cn/: vbs-sdk.md
examples/: akskdemo.py  connect.py  override.py  run_example.py  sample.py
examples/anti_ddos/: anti_ddos.py
examples/auth/: aksk_auth_global_level.py  aksk_auth_project_level.py  auth_with_token_id.py  token_auth_global_level.py  token_auth_project_level.py
examples/auto_scaling/: configs.py  groups.py  lifecycle_hook.py  notifications.py  tag.py
examples/block_store/: version.py
examples/bms/: server.py
examples/cdn/: Domain.py  Log.py  Static.py  preheatTask.py  queryTask.py  refreshTask.py
examples/cloud_eye/: alarms.py  metric_data.py  metrics.py  quotas.py
examples/cluster/: policy.py  policy_type.py  profile.py  profile_type.py
examples/cts/: cts.py
examples/deh/: dedicated_host.py
examples/dms/: dms.py
examples/dns/: ptr.py  recordsets.py  zones.py
examples/ecs/: availability_zone.py  cloudserver.py  create_one_or_more_servers.py  create_server_with_password.py  flavor.py  image.py  job.py  keypair.py  server.py  server_group.py  server_interface.py  server_ip.py
examples/evs/: version.py  (+1 more)
openstack/: __init__.py  aksksession.py  connection.py  exceptions.py  format.py  module_loader.py  profile.py  proxy2.py  resource.py  resource2.py  service_endpoint.py  service_filter.py  session.py  tokenid_session.py  utils.py  version.py
(+748 files in other folders)
