[metadata]
name = huaweicloud-sdk-python
summary = An SDK for building applications to work with OpenStack
description-file =
    README.rst
author = huawei
author-email =
home-page = https://github.com/huaweicloud/huaweicloud-sdk-python
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    openstack

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1
# warning-is-error = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = openstack/locale
domain = python-openstacksdk

[update_catalog]
domain = python-openstacksdk
output_dir = openstack/locale
input_file = openstack/locale/python-openstacksdk.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = openstack/locale/python-openstacksdk.pot

[wheel]
universal = 1
